fix on mobile

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -95,4 +95,7 @@ ul.timeline > li:before {
     margin-top: -10px;
     margin-bottom: 20px;
   }
+  .mob-tab {
+    margin: 0 auto;
+  }
 }
